Includ appropriate JVM args for other gradle commands