@@ -104,7 +104,7 @@ task(runDebug, dependsOn: 'classes', type: JavaExec) {
     systemProperty "games.defaultNoActivityTimeout", "999999000"
     main = 'com.hiddenswitch.spellsource.applications.LocalClustered'
     classpath = sourceSets.main.runtimeClasspath
-    jvmArgs = ["-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005", "-javaagent:${configurations.quasar.iterator().next()}=mb"]
+    jvmArgs("-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005", "-javaagent:${configurations.quasar.iterator().next()}=mb", "--add-modules", "java.se", "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.management/sun.management=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED")
 }
 
 task(local, dependsOn: 'classes', type: JavaExec) {
@@ -112,7 +112,7 @@ task(local, dependsOn: 'classes', type: JavaExec) {
     systemProperty "spellsource.root.logger.level", "DEBUG"
     systemProperty "games.defaultNoActivityTimeout", "999999000"
     main = 'com.hiddenswitch.spellsource.applications.LocalClustered'
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
+    jvmArgs("-javaagent:${configurations.quasar.iterator().next()}=mb", "--add-modules", "java.se", "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.management/sun.management=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED")
     classpath = sourceSets.main.runtimeClasspath
 }
 
@@ -134,6 +134,6 @@ task(localWindows, dependsOn: 'classes', type: JavaExec) {
     systemProperty "spellsource.port", "8080"
     systemProperty "mongo.url", "mongodb://localhost:27017"
     main = 'com.hiddenswitch.spellsource.applications.LocalClustered'
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}=mb"
+    jvmArgs("-javaagent:${configurations.quasar.iterator().next()}=mb", "--add-modules", "java.se", "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.management/sun.management=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED")
     classpath = sourceSets.main.runtimeClasspath
 }
